--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@ test
 
 <li>04-案例篇 (7讲)
     <ul>
-        <li><a href="./00开篇词丨学好网络编程，需要掌握哪些核心问题？ geekbang/80-网络编程实战/01-开篇词 (1讲)/00开篇词丨学好网络编程，需要掌握哪些核心问题？.html">29丨流计算与消息（一）：通过Flink理解流计算的原理.html</a></li>
     </ul>
 </li>
+
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <title>geekbang</title></head>
+<body>
+<div class="container-lg px-3 my-5 markdown-body">
+
+    <h1><a href="http://juconcurrent.com/books-jksj-71-80/">books-jksj-71-80</a></h1>
+
+
+    <h2 id="79-消息队列高手课完结">79-消息队列高手课（完结）</h2>
+    <ul>
+        <li>01-课前必读 (2讲)
+            <ul>
+                <li>
+                    <a href="./00开篇词丨学好网络编程，需要掌握哪些核心问题？ geekbang/80-网络编程实战/01-开篇词 (1讲)/00开篇词丨学好网络编程，需要掌握哪些核心问题？.html">29丨流计算与消息（一）：通过Flink理解流计算的原理.html</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+
+</div>
+</body>
+</html>
