--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ test
 <body>
 <div class="container-lg px-3 my-5 markdown-body">
 
-    <h1><a href="http://juconcurrent.com/books-jksj-71-80/">books-jksj-71-80</a></h1>
+    <h1><a>Geekbang</a></h1>
 
 
     <h2 id="79-消息队列高手课完结">79-消息队列高手课（完结）</h2>
