--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li>01-课前必读 (2讲)
             <ul>
                 <li>
-                    <a href="./geekbang/80-网络编程实战/01-开篇词 (1讲)/00开篇词丨学好网络编程，需要掌握哪些核心问题？.html">00开篇词丨学好网络编程，需要掌握哪些核心问题？.html</a>
+                    <a href="geekbang/80-网络编程实战/01-开篇词 (1讲)/00开篇词丨学好网络编程，需要掌握哪些核心问题？.html">00开篇词丨学好网络编程，需要掌握哪些核心问题？.html</a>
                 </li>
             </ul>
         </li>
